Revert "added additional functionality"