@@ -1,18 +1,19 @@
 package org.example;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Arrays;
 
 public class Main {
     private static final StringSorter sorter = new StringSorter();
-    private static List<String> unsortedStrings;
+    private static List<String> unsortedStrings = new ArrayList<>();
     private static String exceptionChar;
-    private static List<String> sortedStrings;
 
     public static void main(String[] args) {
-        unsortedStrings = List.of("apple", "banana", "grape", "avocado", "cherry");
+        unsortedStrings = Arrays.asList("apple", "banana", "grape", "avocado", "cherry");
         exceptionChar = "a";
 
-        sortedStrings = sorter.sortStrings(unsortedStrings, exceptionChar);
+        List<String> sortedStrings = sorter.sortStrings(unsortedStrings, exceptionChar);
 
         sortedStrings.forEach(System.out::println);
     }
